@@ -1,3 +1,9 @@
+globus-ftp-control (5.4-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Wed, 12 Feb 2014 14:25:18 -0500
+
 globus-ftp-control (5.3-1+gt6.@distro@) @distro@; urgency=low
 
   * Test fixes
